# QueenFish

./: Cargo.toml  Optimizations.md  README.md  opening.txt  opening_4_10.txt  opening_5_10.txt
src/: lib.rs  main.rs
src/board/: board.rs  constants.rs  engine.rs  mod.rs  move_gen.rs  openings.rs  test.rs  zobrist.rs
src/py/: full_game_test.py  generate_opening_book.py  main.py  openings_book.txt  perft.py  test_best_move.py  test_move_generation.py
