[package]
name = "chess"
version = "0.1.0"
edition = "2024"
autobins = false

[profile.release]
debug = true

[dependencies]
once_cell = "1.21.3"
rand = "0.9.2"
smallvec = "1.13"

[profile.test]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bin]]
name = "test_best_move"
path = "src/bin/test_best_move.rs"


[[bin]]
name = "perft"
path = "src/bin/perft.rs"


[[bin]]
name = "uci"
path = "src/bin/uci.rs"

[[bin]]
name = "open"
path = "src/bin/openings_generator.rs"
